--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -60,6 +60,7 @@ jobs:
         uses: opensearch-project/dashboards-anywhere/.github/workflows/reusable-function-test.yml@featureaction
         with:
           endpoint: https://playground.opensearch.oss.aws.dev
+        secrets:
           osd-user: ${{ secrets.OSD_USER }}
           osd-user-password: ${{ secrets.OSD_USER_PASSWORD }}
 
@@ -68,5 +69,6 @@ jobs:
         uses: opensearch-project/dashboards-anywhere/.github/workflows/reusable-function-test.yml@featureaction
         with:
           endpoint: https://playground.opensearch.org
+        secrets:
           osd-user: ${{ secrets.OSD_USER }}
           osd-user-password: ${{ secrets.OSD_USER_PASSWORD }}
