--- a/.github/workflows/deployment-template.yml
+++ b/.github/workflows/deployment-template.yml
@@ -40,8 +40,9 @@ jobs:
           KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
         with:
           plugins: "" # optional, list of Helm plugins. eg. helm-secrets or helm-diff.
-          # lists couple helm and kubetl commands here as placeholder, will add more
-          # detail deployment command when helm configuration file ready.
+          # Teardown the current OS and OSD and then install the lastest version
+          # of OS and OSD as it only takes 23 seconds for the process, will add
+          # blue/green deployment later.
           command: |
             helm repo add opensearch ${{ inputs.helm-repo }}
             helm repo update
