--- a/config/playground/helm/dev/helm-opensearch.yaml
+++ b/config/playground/helm/dev/helm-opensearch.yaml
@@ -76,7 +76,7 @@ config:
               ".opendistro-asynchronous-search-response*",
             ]
 
-# Extra environment variables to append to this nodeGroup
+# Extra environment variables to append to this nodeGroup.
 # This will be appended to the current 'env:' key. You can use any of the kubernetes env
 # syntax here
 extraEnvs:
