adds matrix for functional test template
Signed-off-by: Tao liu <liutaoaz@amazon.com>

--- a/.github/workflows/deployment-template.yml
+++ b/.github/workflows/deployment-template.yml
@@ -1,4 +1,4 @@
-name: OpenSearch and Dashboards Deployment Template
+name: OpenSearch and OpenSearch Dashboards Deployment Template
 
 on:
   workflow_call:
