--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -7,6 +7,9 @@ on:
   # adds workflow_dispatch for manually running a workflow
   workflow_dispatch:
 
+env:
+  helm-repo: https://opensearch-project.github.io/helm-charts/
+
 jobs:
 
   Pre-Deployment:
@@ -34,7 +37,7 @@ jobs:
     if:  ${{ needs.Pre-Deployment.outputs.config_change_dev == 'true' }}
     uses:  opensearch-project/dashboards-anywhere/.github/workflows/reusable-deployment.yml@featureaction
     with:
-      helm-repo: https://opensearch-project.github.io/helm-charts/
+      helm-repo: ${{ env.helm-repo }}
       deploy-env: dev
     secrets:
       access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
@@ -47,7 +50,7 @@ jobs:
     if: ${{ needs.Pre-Deployment.outputs.config_change_prod == 'true'}}
     uses:  opensearch-project/dashboards-anywhere/.github/workflows/reusable-deployment.yml@featureaction
     with:
-      helm-repo: https://opensearch-project.github.io/helm-charts/
+      helm-repo: ${{ env.helm-repo }}
       deploy-env: prod
     secrets:
       access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
