--- a/src/playground/sample_data_tooling/requirements.txt
+++ b/src/playground/sample_data_tooling/requirements.txt
@@ -25,6 +25,7 @@ pyparsing==3.0.9
 pytest==7.1.2
 python-dateutil==2.8.2
 requests==2.28.1
+requests-mock==1.9.3
 six==1.16.0
 tomli==2.0.1
 urllib3==1.26.10
