Change index names in config to be more specific
Signed-off-by: Huy Nguyen <73027756+huyaboo@users.noreply.github.com>

--- a/src/playground/sample_data_tooling/config/ad_plugin_config.json
+++ b/src/playground/sample_data_tooling/config/ad_plugin_config.json
@@ -47,7 +47,7 @@
         "description": "Monitors cpu usage every 10 minutes",
         "time_field": "date",
         "indices": [
-            "test-index"
+            "cpu-usage-logs*"
         ],
         "feature_attributes": [
             {
